--- a/protocol/package.json
+++ b/protocol/package.json
@@ -1,62 +1,62 @@
 {
-  "name": "@rsd-finance/dollar",
-  "license": "MIT",
-  "dependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@ethersproject/abstract-signer": "^5.0.9",
-    "@ethersproject/bignumber": "^5.0.12",
-    "@typechain/ethers-v5": "^5.0.0",
-    "@types/chai": "^4.2.14",
-    "@types/fs-extra": "^9.0.6",
-    "commitizen": "^4.2.2",
-    "cz-conventional-changelog": "^3.3.0",
-    "fs-extra": "^9.0.1",
-    "hardhat-typechain": "^0.3.4",
-    "husky": "^4.3.6",
-    "mocha": "^8.2.1",
-    "shelljs": "^0.8.4",
-    "solidity-coverage": "^0.7.13",
-    "ts-generator": "^0.1.1",
-    "typechain": "^4.0.1",
-    "@nomiclabs/hardhat-ethers": "^2.0.1",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "@openzeppelin/contracts": "^2.5.0",
-    "@openzeppelin/upgrades": "^2.8.0",
-    "@solidity-parser/parser": "^0.10.1-rc.1",
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.19",
-    "@typescript-eslint/eslint-plugin": "^4.11.1",
-    "@typescript-eslint/parser": "^4.11.1",
-    "@uniswap/lib": "^1.1.2",
-    "@uniswap/v2-core": "^1.0.1",
-    "chai": "^4.2.0",
-    "dotenv": "^8.2.0",
-    "eslint": "^7.17.0",
-    "eslint-config-prettier": "^7.1.0",
-    "eth-sig-util": "^3.0.0",
-    "ethereum-waffle": "^3.2.1",
-    "ethers": "^5.0.24",
-    "hardhat": "^2.0.6",
-    "prettier": "^2.1.2",
-    "prettier-plugin-solidity": "^1.0.0-beta.1",
-    "solc": "0.5.17",
-    "solhint": "^3.3.2",
-    "solhint-plugin-prettier": "^0.0.5",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
-  },
-  "scripts": {
-    "commit": "git-cz",
-    "coverage": "hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/**/*.ts\"",
-    "lint:ts": "eslint --config ./.eslintrc.yaml --ignore-path ./.eslintignore --ext .js,.ts .",
-    "prettier:list-different": "prettier --config .prettierrc --list-different \"**/*.{js,json,md,sol,ts}\"",
-    "typechain": "hardhat typechain",
-    "compile": "hardhat compile",
-    "test": "hardhat test",
-    "clean": "hardhat clean",
-    "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
-    "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
-    "prettier": "prettier --config .prettierrc --write \"**/*.{js,json,md,sol,ts}\""
-  }
+    "name": "@rsd-finance/dollar",
+    "license": "MIT",
+    "dependencies": {
+        "@commitlint/cli": "^11.0.0",
+        "@commitlint/config-conventional": "^11.0.0",
+        "@ethersproject/abstract-signer": "^5.0.10",
+        "@ethersproject/bignumber": "^5.0.13",
+        "@typechain/ethers-v5": "^5.0.0",
+        "@types/chai": "^4.2.14",
+        "@types/fs-extra": "^9.0.6",
+        "commitizen": "^4.2.2",
+        "cz-conventional-changelog": "^3.3.0",
+        "fs-extra": "^9.0.1",
+        "hardhat-typechain": "^0.3.4",
+        "husky": "^4.3.7",
+        "mocha": "^8.2.1",
+        "shelljs": "^0.8.4",
+        "solidity-coverage": "^0.7.13",
+        "ts-generator": "^0.1.1",
+        "typechain": "^4.0.1",
+        "@nomiclabs/hardhat-ethers": "^2.0.1",
+        "@nomiclabs/hardhat-waffle": "^2.0.1",
+        "@openzeppelin/contracts": "^2.5.0",
+        "@openzeppelin/upgrades": "^2.8.0",
+        "@solidity-parser/parser": "^0.11.0",
+        "@types/mocha": "^8.2.0",
+        "@types/node": "^14.14.20",
+        "@typescript-eslint/eslint-plugin": "^4.13.0",
+        "@typescript-eslint/parser": "^4.13.0",
+        "@uniswap/lib": "^2.1.0",
+        "@uniswap/v2-core": "^1.0.1",
+        "chai": "^4.2.0",
+        "dotenv": "^8.2.0",
+        "eslint": "^7.17.0",
+        "eslint-config-prettier": "^7.1.0",
+        "eth-sig-util": "^3.0.0",
+        "ethereum-waffle": "^3.2.1",
+        "ethers": "^5.0.25",
+        "hardhat": "^2.0.7",
+        "prettier": "^2.2.1",
+        "prettier-plugin-solidity": "^1.0.0-beta.3",
+        "solc": "0.8.0",
+        "solhint": "^3.3.2",
+        "solhint-plugin-prettier": "^0.0.5",
+        "ts-node": "^9.1.1",
+        "typescript": "^4.1.3"
+    },
+    "scripts": {
+        "commit": "git-cz",
+        "coverage": "hardhat coverage --solcoverjs ./.solcover.js --temp artifacts --testfiles \"./test/**/*.ts\"",
+        "lint:ts": "eslint --config ./.eslintrc.yaml --ignore-path ./.eslintignore --ext .js,.ts .",
+        "prettier:list-different": "prettier --config .prettierrc --list-different \"**/*.{js,json,md,sol,ts}\"",
+        "typechain": "hardhat typechain",
+        "compile": "hardhat compile",
+        "test": "hardhat test",
+        "clean": "hardhat clean",
+        "lint": "yarn run lint:sol && yarn run lint:ts && yarn run prettier:list-different",
+        "lint:sol": "solhint --config ./.solhint.json --max-warnings 0 \"contracts/**/*.sol\"",
+        "prettier": "prettier --config .prettierrc --write \"**/*.{js,json,md,sol,ts}\""
+    }
 }
